fix double scrollbar

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -122,8 +122,6 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
-  overflow-x: hidden;
-  overflow-y: scroll;
   text-rendering: optimizeLegibility;
   font-family: "BG regular", sans-serif;
   background-color: #fff;
