--- a/docs/scss/pages/layout.scss
+++ b/docs/scss/pages/layout.scss
@@ -3,16 +3,10 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
-  overflow-x: hidden;
-  overflow-y: scroll;
   text-rendering: optimizeLegibility;
   font-family: "BG regular", sans-serif;
   background-color: $white;
   position: relative;
-
-  // &::-webkit-scrollbar {
-  //   display: none;
-  // }
 }
 
 .wrapper {
